p6/tests/t051.err
Semantic error on line 1: Incorrect type for parameter 'x' of object r.
