p6/tests/t051.gpl
rectangle r(x = 3.145);
